Add open-meteo dependency to weather_station service
The weather_station service now depends on open-meteo, ensuring open-meteo is started before weather_station in the Docker Compose setup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,8 @@ services:
   weather_station:
     image: weatherstation:latest
     container_name: weatherstation
+    depends_on:
+      - open-meteo
     networks:
       - open_network_network
     ports:
